changed title letter spacing

--- a/Project3/TTT.css
+++ b/Project3/TTT.css
@@ -4,6 +4,7 @@ h1
     color: aliceblue;
     font-size: 60px;
     font-family: 'Ranchers';
+    letter-spacing: 3px;
 }
 
 /* Instructions Text */
